syntax = "proto3";
import "erp/deliver/PurchaseProdInOut.proto";
import "BaseEntity.proto";
package b2b.erp.deliver;

option java_multiple_files = true;
option java_package = "com.usoft.b2b.external.erp.deliver.api.protobuf";
option java_outer_classname = "IPurchaseProdInOutServiceProto";

//采购验收\验退单
service IPurchaseProdInOutService {

    //将ERP的采购验收单写到平台 -restAPI /erp/purchase/prodInOut, method:post, type:json
    rpc savePurchaseProdInOut(SavePurchaseProdInOutReq) returns (SavePurchaseProdInOutResp) { }

    //将ERP的反过账的采购验收单写到平台 -restAPI /erp/purchase/prodInOut/nonPosting, method:post, type:json
    rpc nonPostingProdInOut(NonPostingProdInOutReq) returns (NonPostingProdInOutResp) { }

    //将ERP的采购验退单写到平台 -restAPI /erp/purchase/prodReturn, method:post, type:json
    rpc savePurchaseProdReturn(SavePurchaseProdReturnReq) returns (SavePurchaseProdReturnResp) { }

    //将ERP的反过账的采购验退单写到平台 -restAPI /erp/purchase/prodReturn/nonPosting, method:post, type:json
    rpc nonPostingProdReturn(NonPostingProdReturnReq) returns (NonPostingProdReturnResp) { }
}

//保存采购验收单 请求参数
message SavePurchaseProdInOutReq {
    repeated PurchaseProdInOut data = 1; //ERP验收单集合
}

//保存采购验收单 响应参数
message SavePurchaseProdInOutResp {
    repeated PurchaseProdInOut data = 1; //带b2b的ERP验收单集合
}

//反过账采购验收单 请求参数
message NonPostingProdInOutReq {
    repeated PurchaseProdInOut data = 1; //ERP反过账验收单集合
}

//反过账采购验收单 响应参数
message NonPostingProdInOutResp {
    RespHeader respHeader = 1; // 响应体
}

//保存采购验退单 请求参数
message SavePurchaseProdReturnReq {
    repeated PurchaseProdInOut data = 1; //ERP采购验退单
}

//保存采购验退单 响应参数
message SavePurchaseProdReturnResp {
    repeated PurchaseProdInOut data = 1; //带b2b的ERP采购验退单
}

//反过账采购验收单 请求参数
message NonPostingProdReturnReq {
    repeated PurchaseProdInOut data = 1; //ERP反过账采购验退单
}

//反过账采购验收单 响应参数
message NonPostingProdReturnResp {
}