syntax = "proto3";

package b2b.erp.deliver;
option java_multiple_files = true;
option java_package = "com.usoft.b2b.external.erp.deliver.api.entity";

message SaleNotifyDown {
    int64 b2b_pn_id = 1; //平台送货提醒id
    int64 sn_custuu = 2; //送货提醒单所属企业UU
    string sn_pocode = 3; //po单号
    int32 sn_podetno = 4; //po明细序号
    string sn_remark = 5; //备注
    double sn_qty = 6; //数量
    int64 sn_delivery = 7; //交货日期(时间戳)
    double sn_sendqty = 8; //已发货数
}

//卖家ERP系统的发货单
message SaleOut {
    int64 b2b_ss_id = 1; //平台发货单id
    string pi_inoutno = 2; //送货单号
    string pi_currency = 3; //币别
    float pi_rate = 4; //汇率
    int64 cu_uu = 5; //客户企业UU
    int64 cu_contactuu = 6; //客户联系人UU
    string pi_payment = 7; //付款方式
    string pi_remark = 8; //备注
    string pi_recordman = 9; //录单人
    string pi_auditman = 10;
    message SaleOutDetail {
        int32 pd_pdno = 1; //序号
        double pd_outqty = 2; //数量
        double pd_sendprice = 3; //单价
        int64 pd_orderid = 4; //关联的平台客户采购明细ID
        int64 b2b_pn_id = 5; //关联的平台送货提醒单ID
    }
    repeated SaleOutDetail detailList = 11; //明细
}

//卖家ERP系统的已结案客户送货提醒单
message SaleNotifyDownEnd {
    int64 b2b_pn_id = 1; //平台送货提醒单id
    int64 cu_uu = 2; //送货提醒单所属企业UU
}